Fix double border on rotate

--- a/assets/components/upgrademodx/css/progress.scss
+++ b/assets/components/upgrademodx/css/progress.scss
@@ -126,6 +126,7 @@ div#Upgrade_modx {
 
   .progress-button[data-perspective] .content {
     border: 1px solid $button-border-color;
+    border-top: none;
     border-radius: 3px !important;
     padding: 0;
     width: 100%;
@@ -190,6 +191,7 @@ div#Upgrade_modx {
     position: absolute;
     top: 100%;
     left: 1.5px;
+    border-bottom: none;
     // width: 496px;
     // width: 297px;
     width: $progress-width;
@@ -205,6 +207,7 @@ div#Upgrade_modx {
   .progress-button[data-style="rotate-angle-bottom"].state-loading .progress-wrap {
     -webkit-transform: rotateX(45deg);
     transform: rotateX(45deg);
+    border-bottom: none;
   }
 
   /* UpgradeMODX page styles */
